--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ body {
     <a href="https://www.youtube.com/watch?v=-vGDlcEJXBw" class="button">برمجة ونشر موقعك من الهاتف</a>
     <a href="https://scratch.mit.edu/users/1Hiba7/" class="button">ملفي الشخصي في سكراتش</a>
     <a href="2D.html" class="button">صورة ثنائية الأبعاد</a>
+    <a href="3D1.html" class="button">مجسم ثلاثي الأبعاد</a>
     <!-- أضف هنا المزيد من الأزرار -->
 </div>
   
